# arkos

./: AGENTS.md  Cargo.toml  GO-LIVE-CHECKLIST.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  TESTNET_PARAMS.md  vercel.json
.github/workflows/: mobile-build.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_deser.rs  fuzz_hybrid_pubkey.rs  fuzz_p2p_parse.rs  fuzz_tx_deser.rs
mobile/: .gitignore  README.md  preview.html  pubspec.yaml
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/arkos/mobile/: MainActivity.kt  TeeChannel.kt
mobile/ios/Runner/: AppDelegate.swift  TeeChannel.swift
mobile/lib/: main.dart  theme.dart
mobile/lib/models/: block_template.dart  device_info.dart  mining_stats.dart
mobile/lib/screens/: main_shell.dart  mining_screen.dart  settings_screen.dart  setup_screen.dart  wallet_screen.dart
mobile/lib/services/: device_service.dart  mining_ffi.dart  mining_service.dart  rpc_client.dart  wallet_service.dart
mobile/native/: Cargo.toml
mobile/native/src/: lib.rs
mobile/scripts/: build_native_android.sh  build_native_ios.sh
scripts/: release.sh  soak_controller.sh  soak_report.py  verify.sh
src/: lib.rs  main.rs
src/blockchain/: block.rs  chain.rs  consensus.rs  mod.rs
src/crypto/: arkhash.rs  hash.rs  keys.rs  mod.rs  quantum.rs
src/mining/: device.rs  mod.rs
src/network/: discovery.rs  mod.rs  node.rs  noise.rs  peer.rs  peers.rs  protocol.rs
src/rpc/: methods.rs  server.rs
src/security/: access.rs  mod.rs  rate_limit.rs  vault.rs
src/storage/: db.rs
src/transaction/: mempool.rs  mod.rs  tx.rs  utxo.rs
src/wallet/: wallet.rs
tests/: multinode.rs  security_test.rs  task_features.rs
website/: index.html  serve.sh
